fix icon alignment and clear filter for post page

--- a/app/assets/stylesheets/components/_globals.scss
+++ b/app/assets/stylesheets/components/_globals.scss
@@ -79,10 +79,6 @@ body {
   max-width: 400px;
 }
 
-.glyphicon {
-  vertical-align: middle;
-}
-
 .label.label-inverted {
   color: $global-font-color;
   background-color: $white;
