--- a/app/assets/stylesheets/components/_posts.scss
+++ b/app/assets/stylesheets/components/_posts.scss
@@ -81,5 +81,6 @@
   .glyphicon-tag {
     color: $dark-gray;
     transform: rotate(90deg);
+    vertical-align: middle;
   }
 }
